Load data from json file

--- a/sample/MessageApp/MessageApp/WebUI/MessageList.razor
+++ b/sample/MessageApp/MessageApp/WebUI/MessageList.razor
@@ -8,254 +8,25 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>Abbot &lt;oliver@smoke-stage.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>Booking confirmation #389629244</td>
-            <td>May 25, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Addison Begoat &lt;upton.oprdrusson@pear-income.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>FW: Associate advice</td>
-            <td>May 7, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Allistair &lt;leroy72@plane-railway.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Phone call tomorrow 5 o'clock</td>
-            <td>May 19, 2011</td>
-        </tr>
-
-        <tr>
-            <td>emmanuel26@ghost.xyz</td>
-            <td>steve@example.com</td>
-            <td>Completing basketball project</td>
-            <td>May 22, 2011</td>
-        </tr>
-
-        <tr>
-            <td>jamalia.alnismith1@twigdad.xyz</td>
-            <td>steve@example.com</td>
-            <td>FW: Can you get DE to resubmit accounts?</td>
-            <td>Apr 26, 2011</td>
-        </tr>
-
-        <tr>
-            <td>lionel.qugy@cribsmoke.xyz</td>
-            <td>steve@example.com</td>
-            <td>RE: Catch up at 9:00 to finalise rain spec</td>
-            <td>May 22, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Madison Lalinesson &lt;melinda.gofagy@wing-language2.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Pencil scenarios</td>
-            <td>May 19, 2011</td>
-        </tr>
-
-        <tr>
-            <td>rajah.nukripyford@cast92.xyz</td>
-            <td>steve@example.com</td>
-            <td>Flavor benefit gig</td>
-            <td>Apr 28, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Sandra Juanhison &lt;yoshi.mostaline72@facefruit.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Apparel5 network is back up</td>
-            <td>May 8, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Sylvester &lt;rose.va@bunpig98.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>Feedback requested by Ayanna Nuyo</td>
-            <td>May 1, 2011</td>
-        </tr>
-
-        <tr>
-            <td>veronica@heart.xyz</td>
-            <td>steve@example.com</td>
-            <td>Project Book starting 6pm</td>
-            <td>May 4, 2011</td>
-        </tr>
-
-        <tr>
-            <td>XLN &lt;basia@framehome.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Remember Whoopi's joke</td>
-            <td>May 8, 2011</td>
-        </tr>
-        <tr>
-            <td>Abbot &lt;oliver@smoke-stage.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>Booking confirmation #389629244</td>
-            <td>May 25, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Addison Begoat &lt;upton.oprdrusson@pear-income.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>FW: Associate advice</td>
-            <td>May 7, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Allistair &lt;leroy72@plane-railway.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Phone call tomorrow 5 o'clock</td>
-            <td>May 19, 2011</td>
-        </tr>
-
-        <tr>
-            <td>emmanuel26@ghost.xyz</td>
-            <td>steve@example.com</td>
-            <td>Completing basketball project</td>
-            <td>May 22, 2011</td>
-        </tr>
-
-        <tr>
-            <td>jamalia.alnismith1@twigdad.xyz</td>
-            <td>steve@example.com</td>
-            <td>FW: Can you get DE to resubmit accounts?</td>
-            <td>Apr 26, 2011</td>
-        </tr>
-
-        <tr>
-            <td>lionel.qugy@cribsmoke.xyz</td>
-            <td>steve@example.com</td>
-            <td>RE: Catch up at 9:00 to finalise rain spec</td>
-            <td>May 22, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Madison Lalinesson &lt;melinda.gofagy@wing-language2.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Pencil scenarios</td>
-            <td>May 19, 2011</td>
-        </tr>
-
-        <tr>
-            <td>rajah.nukripyford@cast92.xyz</td>
-            <td>steve@example.com</td>
-            <td>Flavor benefit gig</td>
-            <td>Apr 28, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Sandra Juanhison &lt;yoshi.mostaline72@facefruit.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Apparel5 network is back up</td>
-            <td>May 8, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Sylvester &lt;rose.va@bunpig98.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>Feedback requested by Ayanna Nuyo</td>
-            <td>May 1, 2011</td>
-        </tr>
-
-        <tr>
-            <td>veronica@heart.xyz</td>
-            <td>steve@example.com</td>
-            <td>Project Book starting 6pm</td>
-            <td>May 4, 2011</td>
-        </tr>
-
-        <tr>
-            <td>XLN &lt;basia@framehome.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Remember Whoopi's joke</td>
-            <td>May 8, 2011</td>
-        </tr>
-        <tr>
-            <td>Abbot &lt;oliver@smoke-stage.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>Booking confirmation #389629244</td>
-            <td>May 25, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Addison Begoat &lt;upton.oprdrusson@pear-income.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>FW: Associate advice</td>
-            <td>May 7, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Allistair &lt;leroy72@plane-railway.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Phone call tomorrow 5 o'clock</td>
-            <td>May 19, 2011</td>
-        </tr>
-
-        <tr>
-            <td>emmanuel26@ghost.xyz</td>
-            <td>steve@example.com</td>
-            <td>Completing basketball project</td>
-            <td>May 22, 2011</td>
-        </tr>
-
-        <tr>
-            <td>jamalia.alnismith1@twigdad.xyz</td>
-            <td>steve@example.com</td>
-            <td>FW: Can you get DE to resubmit accounts?</td>
-            <td>Apr 26, 2011</td>
-        </tr>
-
-        <tr>
-            <td>lionel.qugy@cribsmoke.xyz</td>
-            <td>steve@example.com</td>
-            <td>RE: Catch up at 9:00 to finalise rain spec</td>
-            <td>May 22, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Madison Lalinesson &lt;melinda.gofagy@wing-language2.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Pencil scenarios</td>
-            <td>May 19, 2011</td>
-        </tr>
-
-        <tr>
-            <td>rajah.nukripyford@cast92.xyz</td>
-            <td>steve@example.com</td>
-            <td>Flavor benefit gig</td>
-            <td>Apr 28, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Sandra Juanhison &lt;yoshi.mostaline72@facefruit.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Apparel5 network is back up</td>
-            <td>May 8, 2011</td>
-        </tr>
-
-        <tr>
-            <td>Sylvester &lt;rose.va@bunpig98.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>Feedback requested by Ayanna Nuyo</td>
-            <td>May 1, 2011</td>
-        </tr>
-
-        <tr>
-            <td>veronica@heart.xyz</td>
-            <td>steve@example.com</td>
-            <td>Project Book starting 6pm</td>
-            <td>May 4, 2011</td>
-        </tr>
-
-        <tr>
-            <td>XLN &lt;basia@framehome.xyz&gt;</td>
-            <td>steve@example.com</td>
-            <td>RE: Remember Whoopi's joke</td>
-            <td>May 8, 2011</td>
-        </tr>
+        @foreach (var mail in folder.Mails)
+        {
+            <tr>
+                <td>@mail.From</td>
+                <td>@mail.To</td>
+                <td>@mail.Subject</td>
+                <td>@mail.Date</td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@code {
+    private MailFolder folder;
+    private string folderName = "Inbox";
+
+    protected override void OnInitialized()
+    {
+        var json = File.ReadAllText(Path.Combine("Storage", $"{folderName}.json"));
+        folder = JsonSerializer.Deserialize<MailFolder>(json, new JsonSerializerOptions { PropertyNameCaseInsensitive = true });
+    }
+}
