--- a/sample/MessageApp/MessageApp/MainPage.xaml
+++ b/sample/MessageApp/MessageApp/MainPage.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:b="clr-namespace:BlazorDesktop.Elements;assembly=BlazorDesktop"
+             xmlns:app="clr-namespace:MessageApp.WebUI"
              mc:Ignorable="d"
              x:Class="MessageApp.MainPage"
              xmlns:pages="clr-namespace:MessageApp">
@@ -11,9 +13,13 @@
         <MasterDetailPage>
 
             <MasterDetailPage.Master>
-                <ContentPage Title="My title" IconImageSource="tab_feed.png">
-                    <Label Text="Welcome to Xamarin.Forms!" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
-                </ContentPage>
+                <NavigationPage Title="Folders">
+                    <x:Arguments>
+                        <ContentPage Title="Folders">
+                            <b:BlazorWebView x:TypeArguments="app:FolderList" ContentRoot="WebUI/wwwroot" VerticalOptions="FillAndExpand" />
+                        </ContentPage>
+                    </x:Arguments>
+                </NavigationPage>
             </MasterDetailPage.Master>
 
             <MasterDetailPage.Detail>
