--- a/sample/MessageApp/MessageApp/WebUI/wwwroot/css/app.css
+++ b/sample/MessageApp/MessageApp/WebUI/wwwroot/css/app.css
@@ -1,5 +1,11 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+html, body, app {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
 }
@@ -36,48 +42,26 @@ body {
 }
 
 .folders {
-    background-color: #bbb;
+    background-color: #ddd;
     list-style-type: none;
-    padding: 0;
+    padding: 0.5rem;
     margin: 0;
-    border-radius: 7px;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #d6d6d6), color-stop(0.4, #c0c0c0), color-stop(1,#a4a4a4));
-    margin: 10px 0 16px 0;
     font-size: 0px;
+    min-height: 100%;
 }
 
     .folders li:hover {
-        background-color: #ddd;
-    }
-
-    .folders li:first-child {
-        border-left: none;
-        border-radius: 7px 0 0 7px;
+        background-color: #ccc;
     }
 
     .folders li {
         font-size: 16px;
         font-weight: bold;
-        display: inline-block;
         padding: 0.5em 1.5em;
         cursor: pointer;
         color: #444;
         text-shadow: #f7f7f7 0 1px 1px;
-        border-left: 1px solid #ddd;
-        border-right: 1px solid #888;
-    }
-
-    .folders li {
-        *display: inline !important;
-    }
-    /* IE7 only */
-    .folders .selected {
-        background-color: #444 !important;
-        color: white;
-        text-shadow: none;
-        border-right-color: #aaa;
-        border-left: none;
-        box-shadow: inset 1px 2px 6px #070707;
+        border-radius: 4px;
     }
 
 .mails {
