Make all projects compile and run with updates names

--- a/samples/HybridApp/HybridApp/Main.razor
+++ b/samples/HybridApp/HybridApp/Main.razor
@@ -9,7 +9,7 @@
         </StackLayout>
 
         <BlazorWebView ContentRoot="WebUI/wwwroot" VerticalOptions="LayoutOptions.FillAndExpand">
-            <MyApplication.WebUI.App />
+            <HybridApp.WebUI.App />
         </BlazorWebView>
 
     </StackLayout>
