--- a/samples/HybridApp/HybridApp/WebUI/_Imports.razor
+++ b/samples/HybridApp/HybridApp/WebUI/_Imports.razor
@@ -4,4 +4,4 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using MyApplication.WebUI.Shared
+@using HybridApp.WebUI.Shared
