--- a/samples/HybridApp/HybridApp/_Imports.razor
+++ b/samples/HybridApp/HybridApp/_Imports.razor
@@ -2,5 +2,5 @@
 @using Microsoft.MobileBlazorBindings.Elements
 @using Xamarin.Essentials
 @using Xamarin.Forms
-@using BlazorDesktop.Components
+@using Microsoft.MobileBlazorBindings.WebView.Components
 @using Microsoft.AspNetCore.Components.Web
