--- a/samples/HybridMessageApp/HybridMessageApp/WebUI/_Imports.razor
+++ b/samples/HybridMessageApp/HybridMessageApp/WebUI/_Imports.razor
@@ -1,4 +1,4 @@
 @using System.IO
 @using System.Text.Json
-@using MessageApp.Data
+@using HybridMessageApp.Data
 @using Microsoft.AspNetCore.Components.Web
