--- a/samples/HybridMessageApp/HybridMessageApp/MainPage.xaml
+++ b/samples/HybridMessageApp/HybridMessageApp/MainPage.xaml
@@ -3,11 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:b="clr-namespace:BlazorDesktop.Elements;assembly=BlazorDesktop"
-             xmlns:app="clr-namespace:MessageApp.WebUI"
+             xmlns:b="clr-namespace:Microsoft.MobileBlazorBindings.WebView.Elements;assembly=Microsoft.MobileBlazorBindings.WebView"
+             xmlns:app="clr-namespace:HybridMessageApp.WebUI"
              mc:Ignorable="d"
-             x:Class="MessageApp.MainPage"
-             xmlns:pages="clr-namespace:MessageApp">
+             x:Class="HybridMessageApp.MainPage"
+             xmlns:pages="clr-namespace:HybridMessageApp">
 
     <Application.MainPage>
         <MasterDetailPage x:Name="MasterDetails">
