--- a/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/Views/AnimalTemplate.razor
+++ b/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/Views/AnimalTemplate.razor
@@ -1,4 +1,4 @@
-﻿<Grid Padding="new Thickness(10)" RowDefinitions="Auto, Auto" ColumnDefinitions="Auto, Auto">
+﻿<Grid Padding="new Thickness(10)" RowDefinitions="Auto, Auto" ColumnDefinitions="Auto, *">
     <GridCell RowSpan="2">
         <Image Source="new UriImageSource { Uri=new Uri(Animal.ImageUrl) }"
                Aspect="Aspect.AspectFill"
@@ -16,10 +16,22 @@
                FontAttributes="FontAttributes.Italic"
                VerticalOptions="LayoutOptions.End" />
     </GridCell>
+    <GridCell RowSpan="2" ColumnSpan="2">
+            <Button Text=" "
+                    BackgroundColor="Color.Transparent"
+                    OnClick="Details"
+                   VerticalOptions="LayoutOptions.End" />
+    </GridCell>
 </Grid>
 
 
 @code
 {
     [Parameter] public Animal Animal { get; set; }
+    [Parameter] public EventCallback<Animal> OnClick {get; set; }
+    void Details()
+    {
+        if(OnClick.HasDelegate)
+            OnClick.InvokeAsync(Animal);
+    }
 }
