Add support for gesture recognizers (#166)
Add support for gesture recognizers
* Gestures are components so that they can be placed within a parent component

Fixes #165

--- a/samples/ControlGallery/ControlGallery/Views/NavigationSource.razor
+++ b/samples/ControlGallery/ControlGallery/Views/NavigationSource.razor
@@ -13,6 +13,7 @@
             <Button Text="Navigate with decimal" OnClick="NavigateWithDecimal"></Button>
             <Button Text="Navigate with Guid" OnClick="NavigateWithGuid"></Button>
             <Button Text="Navigate with Bool" OnClick="NavigateWithBool"></Button>
+            <Button Text="Navigate to gesture playground" OnClick="@(async () => await NavigationManager.NavigateToAsync("/gestureplayground"))"></Button>
         </StackLayout>
     </ScrollView>
 </ContentPage>
